--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           sudo apt-get install -y ruby ruby-dev rubygems build-essential
           sudo gem install -N fpm
-      - mane: Install dh-virtualenv dependencies
+      - name: Install dh-virtualenv dependencies
         run: |
           sudo apt-get install -y build-essential debhelper devscripts equivs dh-virtualenv dh-python
       - name: Verify code quality
