--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y python3 python3-pip python3-virtualenv
-          pip install wheel
+          pip install wheel stdeb
       - name: Install fpm dependencies
         run: |
           sudo apt-get install -y ruby ruby-dev rubygems build-essential
