--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y python3 python3-pip python3-virtualenv
+          sudo apt-get install -y python3 python3-pip python3-virtualenv python3-all
           pip install wheel stdeb
       - name: Install fpm dependencies
         run: |
