--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -24,7 +24,7 @@ jobs:
           sudo gem install -N fpm
       - name: Install dh-virtualenv dependencies
         run: |
-          sudo apt-get install -y build-essential debhelper devscripts equivs dh-virtualenv dh-python
+          sudo apt-get install -y debhelper devscripts equivs dh-virtualenv dh-python
       - name: Verify code quality
         run: |
           cd python
