refactor: move scripts into a flat directory hierarchy

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,5 +1,5 @@
 [mypy]
-files = pack_python, scripts/wheel, scripts/fpm-deb, scripts/dh-virtualenv, common/*.py
+files = pack_python, wheel, fpm-deb, dh-virtualenv, common.py
 strict = True
 scripts_are_modules = True
 
