--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -21,7 +21,9 @@ jobs:
     name: Build and test
 
     runs-on: ubuntu-latest
-
+    permissions:
+        contents: write
+        discussions: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
