fix: read python path insert (#7)
* fix: read python path insert

* tmp

* Update mypy config, README.md and add extra logging

---------

Co-authored-by: Attila Gombos <attila.gombos@effective-range.com>

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,5 +1,5 @@
 [mypy]
-files = pack_python, wheel, fpm-deb, dh-virtualenv, common.py
+files = pack_python, pack_wheel, pack_fpm-deb, pack_dh-virtualenv, pack_common.py
 strict = True
 scripts_are_modules = True
 
